Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rush: Pasion y Gloria -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Demon Slayer: Mugen Train La pelicula -->
+<li>
+  <a href="../Peliculas/pelicula893.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8t29MfbEkEZixjVbjRkqI5NyFR4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Demon Slayer: Mugen Train La película 2020</span>
+    <span class="hidden">Tanjiro Kamado y sus amigos de la Compañía de Cazadores de Demonios (Kimetsu no Yaiba Corps), se unen con uno de los mejores espadachines de la compañía, Kyojuro Rengoku, para investigar una misteriosa serie de desapariciones que han ocurrido dentro del “Tren Infinito”. Poco saben que Enmu, uno de los miembros de las Doce Lunas Demoníacas, también está a bordo y les ha preparado una trampa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rush: Pasion y Gloria -->
 <li>
   <a href="../Peliculas/pelicula892.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
