Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky II -->
+<li>
+  <a href="../Peliculas/pelicula895.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nMaiiu0CzT77U4JZkUYV7KqdAjK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rocky II 1979</span>
+    <span class="hidden">Después de que Rocky va la distancia con el campeón Apolo Creed, ambo intento de poner la lucha detrás de ellos y circular. Rocky se instala con Adrian, pero no puede reunir su vida fuera del anillo, mientras Creed busca una revancha para restaurar su reputación. Bastante pronto, el «Maestro del Desastre» y el «Semental italiano» se pone en un camino del enfrentamiento para una batalla culminante que es brutal e inolvidable.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rocky -->
 <li>
   <a href="../Peliculas/pelicula894.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
