--- a/Categorias/drama/index.html
+++ b/Categorias/drama/index.html
@@ -48,7 +48,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rocky II -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Rocky III -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula896.html">
+    <img src="https://image.tmdb.org/t/p/original/5Mn0xgB8w9mi2Ifo7WdS8aSgA7V.jpg" alt="Rocky III" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Rocky III</div>
+  <div class="text-xs text-white/70">1982</div>
+</article><!-- Rocky II -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula895.html">
     <img src="https://image.tmdb.org/t/p/original/nMaiiu0CzT77U4JZkUYV7KqdAjK.jpg" alt="Rocky II" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
