Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky II -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky III -->
+<li>
+  <a href="../Peliculas/pelicula896.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5Mn0xgB8w9mi2Ifo7WdS8aSgA7V.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rocky III 1982</span>
+    <span class="hidden">Ahora el campeón del mundo, Rocky Balboa vive en el lujo y sólo lucha contra opositores que no plantean ninguna amenaza para él en el anillo, hasta que Clubber Lang le desafíe a un encuentro. Después de tomar una palpitación de Lang, el campeón humillado da vuelta al antiguo Credo del rival amargo Apolo para una revancha con Lang.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rocky II -->
 <li>
   <a href="../Peliculas/pelicula895.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
