--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky III -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky IV -->
+<li>
+  <a href="../Peliculas/pelicula897.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2MHUit4H6OK5adcOjnCN6suCKOl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rocky IV 1985</span>
+    <span class="hidden">Nuevas aventuras tanto personales como deportivas del boxeador Rocky Balboa, que en esta ocasión debe enfrentarse a un duro y frío boxeador soviético, llamado Ivan Drago.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rocky III -->
 <li>
   <a href="../Peliculas/pelicula896.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
