Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky IV -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Creed. Corazon de campeon -->
+<li>
+  <a href="../Peliculas/pelicula898.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fTdozSSr2cTZcioldjfVUbBzhrW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Creed. Corazón de campeón 2015</span>
+    <span class="hidden">Adonis Johnson nunca conoció a su padre famoso, el campeón mundial de peso pesado Apollo Creed, quien murió antes de que él naciera. Sin embargo, no se puede negar que el boxeo corre por sus venas; así que Adonis se dirige a Filadelfia, el lugar de la legendaria pelea donde Apollo Creed enfrentó a un rudo advenedizo llamado Rocky Balboa. Una vez en la Ciudad del Amor Fraternal, Adonis rastrea a Rocky y le pide que sea su entrenador.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rocky IV -->
 <li>
   <a href="../Peliculas/pelicula897.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
