--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Creed. Corazon de campeon -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Creed 2: Defendiendo el Legado -->
+<li>
+  <a href="../Peliculas/pelicula899.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/76L2V05c4e6bWsIkWXz4GFXUYYG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Creed 2: Defendiendo el Legado 2018</span>
+    <span class="hidden">Adonis Creed se debate entre las obligaciones personales y el entrenamiento para su próxima gran pelea, con el desafío de su vida por delante. Enfrentarse a un oponente que tiene vínculos con el pasado de su familia solo intensifica su inminente batalla en el ring. Afortunadamente Rocky Balboa está a su lado a lo largo de todo el camino, y juntos se cuestionarán por lo que vale la pena luchar y descubrirán que nada es más importante que la familia…</span>
+  </a>
+</li>
+<!--FIN--><!-- Creed. Corazon de campeon -->
 <li>
   <a href="../Peliculas/pelicula898.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
