--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,13 +94,22 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Creed 2: Defendiendo el Legado -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Creed III -->
+<li>
+  <a href="../Peliculas/pelicula900.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fcFMd3HdyX7r5gtFwVnn2qr5Yhq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Creed III 2023</span>
+    <span class="hidden">Adonis Creed ya ha llegado a la cima de su carrera y no tiene nada más que demostrar en el mundo del boxeo. Convertido en un ídolo de este boxeo pasa sus días rodeado de su familia y seres queridos. Sin embargo, todo cambiará cuando regrese un fantasma de su infancia. Su amigo de juventud, Damián, acaba de salir de la cárcel y desea demostrar todo lo que ha aprendido de boxeo estos años. Por ello, querrá enfrentarse en el cuadrilátero con su antiguo amigo.  Adonis Creed tendrá que enfrentarse a este adversario, que no solo quiere quitarle su título de boxeador, sino que desea acabar con él.</span>
+  </a>
+</li>
+<!--FIN--><!-- Creed 2: Defendiendo el Legado -->
 <li>
   <a href="../Peliculas/pelicula899.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/76L2V05c4e6bWsIkWXz4GFXUYYG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Creed 2: Defendiendo el Legado 2018</span>
-    <span class="hidden">Adonis Creed se debate entre las obligaciones personales y el entrenamiento para su próxima gran pelea, con el desafío de su vida por delante. Enfrentarse a un oponente que tiene vínculos con el pasado de su familia solo intensifica su inminente batalla en el ring. Afortunadamente Rocky Balboa está a su lado a lo largo de todo el camino, y juntos se cuestionarán por lo que vale la pena luchar y descubrirán que nada es más importante que la familia…</span>
+    <span class="hidden">Adonis Creed se debate entre las obligaciones personales y el entrenamiento para su próxima gran pelea, con el desafío de su vida por delante. Enfrentarse a un oponente que tiene vínculos con el pasado de su familia solo intensifica su inminente batalla en el ring. Afortunadamente Rocky Balboa está a su lado a lo largo de todo el camino, y juntos se cuestionarán por lo que vale la pena luchar y descubrirán que nada es más importante que la familia⬦</span>
   </a>
 </li>
 <!--FIN--><!-- Creed. Corazon de campeon -->
