--- a/Plataforma/paramount/index.html
+++ b/Plataforma/paramount/index.html
@@ -219,7 +219,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El hombre sin memoria -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Yellowstone -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie102.html">
+    <img src="https://image.tmdb.org/t/p/original/s4QRRYc1V2e68Qy9Wel9MI8fhRP.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Yellowstone</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- El hombre sin memoria -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula881.html">
     <img src="https://image.tmdb.org/t/p/original/sGUFzO1P703rq7YeuNOC74Y58FS.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
