--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Creed III -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yellowstone -->
+<li>
+  <a href="../Series/serie102.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/s4QRRYc1V2e68Qy9Wel9MI8fhRP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Yellowstone 2018</span>
+    <span class="hidden">John Dutton es el propietario del rancho más grande de Estados Unidos. Él y sus hijos entablarán una lucha sin cuartel contra una reserva india y contra el Gobierno federal de Estados Unidos que intenta expandir el parque nacional contiguo a la propiedad de los Dutton.</span>
+  </a>
+</li>
+<!--FIN--><!-- Creed III -->
 <li>
   <a href="../Peliculas/pelicula900.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
