--- a/Series/serie102.html
+++ b/Series/serie102.html
@@ -255,6 +255,39 @@ var videosPorCapitulo = {
     "10": {
       "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1DGxf-1dY5-jZ87bC8hdyAPmrnErrmAPv"
     }
+  },
+  "5": {
+    "1": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/mb3kz6gu26rn",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vvk0myehfe21"
+    },
+    "2": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/k2hzixqipnnc",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/p06vvghk8zql"
+    },
+    "3": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/t2723s22athm",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6ogauzm6e1v9"
+    },
+    "4": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/q9qk5zts5le7",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/zyx3uxblpb57"
+    },
+    "5": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/4vlxakr8u1cy",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/h5m0h3bxgzp3"
+    },
+    "6": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/xhzp5bstn4hk",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/rzeqe7w8cevb"
+    },
+    "7": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/jsjdgiqdf4hm",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/gwpzz08qe1nf"
+    },
+    "8": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nheu5oso9v15"
+    }
   }
 };
 var serieId = "73586";
