--- a/Series/serie102.html
+++ b/Series/serie102.html
@@ -287,7 +287,25 @@ var videosPorCapitulo = {
     },
     "8": {
       "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/nheu5oso9v15"
-    }
+    },
+    "9": {
+  "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1_yerjgLlvMIerkU8n3UMsEO5ruyyOHfk"
+},
+"10": {
+  "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1wO8XMIDvkbLAkInliAO_4A1D8y-RvU8t"
+},
+"11": {
+  "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1ic78z23Fx9-XAjPDvu5Ttj04BQRUmyfz"
+},
+"12": {
+  "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=1Hl0xTtH-LD_OVBGYBlYYV0mOXx_3cjDq"
+},
+"13": {
+  "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=10dTwYYGQoswIr42-6wULoeFptfLbez9n"
+},
+"14": {
+  "url1": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=gdrive&format=video%2Fmp4&link=13lJgXcA_uQiBCbvOxLafipocGhnwatXf"
+}
   }
 };
 var serieId = "73586";
