--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Crimen perfecto -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yo Soy Furia -->
+<li>
+  <a href="../Peliculas/pelicula902.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3KawNznHOhYKQLLeZdbRhKJbfXp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Yo Soy Furia 2016</span>
+    <span class="hidden">Un hombre inicia un camino de venganza contra varios oficiales de policía corruptos, al ser incapaz de descubrir al asesino de su mujer.</span>
+  </a>
+</li>
+<!--FIN--><!-- Crimen perfecto -->
 <li>
   <a href="../Peliculas/pelicula901.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
