Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yo Soy Furia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Alto Knights: Mafia y poder -->
+<li>
+  <a href="../Peliculas/pelicula903.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fZrMqok5ZQH82R1YqBu3LcG26ON.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">The Alto Knights: Mafia y poder 2025</span>
+    <span class="hidden">Dos de los jefes del crimen organizado más conocidos de Nueva York, Frank Costello y Vito Genovese, compiten por el control de las calles de la ciudad. Aunque eran mejores amigos, los celos mezquinos y una serie de traiciones los colocan en una carrera mortal que cambiará la Mafia (y Estados Unidos) para siempre.</span>
+  </a>
+</li>
+<!--FIN--><!-- Yo Soy Furia -->
 <li>
   <a href="../Peliculas/pelicula902.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
