--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Alto Knights: Mafia y poder -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood -->
+<li>
+  <a href="../Peliculas/pelicula904.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q8RtQuLStydGdJmHR4p8jNVssbv.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un detective suelto en Hollywood 1984</span>
+    <span class="hidden">Axel Foley es un impetuoso e inteligente detective de Detroit que sigue la pista del asesino de un amigo suyo hasta los barrios más elegantes de Beverly Hills. Pero antes de que Axel logre su objetivo, va a verse involucrado en una red internacional de contrabandistas y traficantes de droga.</span>
+  </a>
+</li>
+<!--FIN--><!-- The Alto Knights: Mafia y poder -->
 <li>
   <a href="../Peliculas/pelicula903.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
