--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood II -->
+<li>
+  <a href="../Peliculas/pelicula905.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/19fU9cD8nBp3riUgKZi6nLSMO88.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un detective suelto en Hollywood II 1987</span>
+    <span class="hidden">El detective de Detroit Axel Foley se entera por las noticias de la tele de que su amigo Andrew Bogomil, capitán de la policía de Beverly Hills, ha sido tiroteado por una mujer. Cuando va a visitarlo al hospital, conoce a su hija Jan. Con la ayuda de dos agentes amigos suyos intenta localizar a la culpable, a pesar de que el jefe de policía Harold Lutz ha intentado encontrar alguna razón para despedir a los dos agentes. Axel y sus amigos descubren que los "atracos del alfabeto", que han tenido lugar en la zona, son obra del traficante de armas Maxwell Dent, que ha enviado a su prometida Karla Fry a matar a Bogomil porque éste le iba siguiendo los pasos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un detective suelto en Hollywood -->
 <li>
   <a href="../Peliculas/pelicula904.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
