Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood II -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood: Axel F. -->
+<li>
+  <a href="../Peliculas/pelicula906.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3f28IXwRBEZjR75Pm4jCiBw3HZc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un detective suelto en Hollywood: Axel F. 2024</span>
+    <span class="hidden">Cuarenta años después de su primer caso en Beverly Hills, el detective de Detroit Axel Foley vuelve a hacer lo que mejor le sale: resolver crímenes y causar desmadres.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un detective suelto en Hollywood II -->
 <li>
   <a href="../Peliculas/pelicula905.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
