Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un detective suelto en Hollywood III -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Elementos -->
+<li>
+  <a href="../Peliculas/pelicula908.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/d79DeKDCgFOM23O8Dr6MELZVooY.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Elementos 2023</span>
+    <span class="hidden">En una ciudad en la que conviven el fuego, el agua, la tierra y el aire, una joven llena de fuego y un tipo que fluye descubrirán lo mucho que tienen en común.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un detective suelto en Hollywood III -->
 <li>
   <a href="../Peliculas/pelicula907.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
