Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Elementos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Plan familiar -->
+<li>
+  <a href="../Peliculas/pelicula909.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mBiylEUJgWikljJJNB61u7dDPON.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Plan familiar 2023</span>
+    <span class="hidden">Dan Morgan es un hombre con muchas identidades: es un esposo devoto, un padre amoroso y un reconocido vendedor de autos. También es un asesino retirado. Cuando su pasado pone en riesgo a su presente, se ve forzado a llevar a su ingenua familia en un viaje como ningún otro.</span>
+  </a>
+</li>
+<!--FIN--><!-- Elementos -->
 <li>
   <a href="../Peliculas/pelicula908.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
