Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Plan familiar -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Orda -->
+<li>
+  <a href="../Peliculas/pelicula910.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hjrehMikJ4UdHx4RvhK6WVU0l8Q.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Orda 2010</span>
+    <span class="hidden">Un grupo de policías torcidos asaltan un edificio en ruinas ubicado en un suburbio empobrecido de París, decidido a vengar furiosamente la muerte de uno de ellos, asesinado por la despiadada pandilla criminal escondida en la cima del oscuro laberinto que se convertirá en una trampa mortal cuando los vivos, inesperadamente convertidos en muertos vivientes por una misteriosa plaga, comiencen a devorar el mundo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Plan familiar -->
 <li>
   <a href="../Peliculas/pelicula909.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
