--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Orda -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky V -->
+<li>
+  <a href="../Peliculas/pelicula911.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tevHaVxtrMTaUi8f3YjLWYSSY8A.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Rocky V 1990</span>
+    <span class="hidden">Toda una vida de golpes ha terminado la carrera de Rocky, y un torcido contador lo ha dejado en la ruina. Inspirado por el recuerdo de su entrenador, sin embargo, Rocky encuentra la gloria en el entrenamiento y se enfrenta a un boxeador prometedor.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Orda -->
 <li>
   <a href="../Peliculas/pelicula910.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
