Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Rocky Balboa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Echo Valley -->
+<li>
+  <a href="../Peliculas/pelicula913.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1E4WCgTodyS7zo8pSp1gZlPO0th.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Echo Valley 2025</span>
+    <span class="hidden">La vida retirada de Kate se ve interrumpida cuando su afligida hija aparece asustada y cubierta en sangre que no es suya. Mientras descubre la verdad, Kate se da cuenta de lo lejos que llega por su hija.</span>
+  </a>
+</li>
+<!--FIN--><!-- Rocky Balboa -->
 <li>
   <a href="../Peliculas/pelicula912.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
