Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gravedad cero -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dora y la Busqueda del Sol Dorado -->
+<li>
+  <a href="../Peliculas/pelicula915.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sVLSOnGfNXj7VVGBgOz5cNa0lDz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Dora y la Búsqueda del Sol Dorado 2025</span>
+    <span class="hidden">Dora, Diego y sus nuevos amigos se adentran en la traicionera selva amazónica para descubrir el legendario tesoro de Sol Dorado antes de que fuerzas malvadas se apoderen de su inmenso poder.</span>
+  </a>
+</li>
+<!--FIN--><!-- Gravedad cero -->
 <li>
   <a href="../Peliculas/pelicula914.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
