--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,17 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La vieja guardia 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO -->
+	  <!-- Los salvajes -->
+<li>
+  <a href="../Peliculas/pelicula917.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://m.media-amazon.com/images/M/MV5BYjI2NmE0ZGMtNDczYi00MWI5LTk2NjgtY2U2MTIwNTBkYWY5XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los salvajes 2025</span>
+    <span class="hidden">En el siglo XIII, Batu Khan tardó dos meses en tomar Kozelsk, perdiendo muchos hombres. Al conquistarla, mató a todos los defensores, incluidos mujeres y niños, y ordenó que se olvidara el nombre, llamándola Ciudad Feroz.</span>
+  </a>
+</li>
+<!--FIN--><!-- La vieja guardia 2 -->
 <li>
   <a href="../Peliculas/pelicula916.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
