Crear/Actualizar Categorias/aventura/index.html

--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Kayara: La Princesa Inca -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mikaela -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula922.html">
+    <img src="https://image.tmdb.org/t/p/original/jm6lNbpmKcxX6M0pieaKhP6hs3w.jpg" alt="Mikaela" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mikaela</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Kayara: La Princesa Inca -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula921.html">
     <img src="https://image.tmdb.org/t/p/original/A1DSh29atQjLZCVCddMyGw1mbM8.jpg" alt="Kayara: La Princesa Inca" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
