Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Kayara: La Princesa Inca -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mikaela -->
+<li>
+  <a href="../Peliculas/pelicula922.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jm6lNbpmKcxX6M0pieaKhP6hs3w.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mikaela 2025</span>
+    <span class="hidden">En la víspera del día de Reyes una tormenta de nieve sin precedentes asola España. En medio del caos de una autopista colapsada, un grupo de atracadores aprovecha la oportunidad para asaltar un furgón blindado. A escasos metros se encuentra Leo (Antonio Resines), un policía en las últimas que no tiene nada que perder. Con la ayuda inesperada de una joven (Natalia Azahara) tratarán de evitar que la banda huya con el botín en una persecución a contrarreloj en medio de la tempestad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Kayara: La Princesa Inca -->
 <li>
   <a href="../Peliculas/pelicula921.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
