Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mikaela -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tierras Perdidas -->
+<li>
+  <a href="../Peliculas/pelicula923.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sLDxndoqFWwJEq7iEdYQBzPjUDQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tierras Perdidas 2025</span>
+    <span class="hidden">Una reina, desesperada por obtener el don de cambiar de forma, hace una jugada audaz: contrata a la hechicera Gray Alys, una mujer tan temida como poderosa. Enviada al desierto fantasmal de las Tierras Perdidas, Alys y su guía, el vagabundo Boyce, deben burlar y luchar contra el hombre y el demonio en una fábula que explora la naturaleza del bien y el mal, la deuda y la satisfacción, el amor y la pérdida.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mikaela -->
 <li>
   <a href="../Peliculas/pelicula922.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
