Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tierras Perdidas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Terror en el rio -->
+<li>
+  <a href="../Peliculas/pelicula924.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kIO7eVOivYH9LptLxdXio5KRor.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Terror en el rio 2025</span>
+    <span class="hidden">Australia, 1946. Cuando una banda de despiadados delincuentes pierde el oro robado al hundirse su coche en un río, recurren a un equipo de buceadores desesperados y sin suerte para recuperarlo. Lo que comienza como una misión de recuperación de alto riesgo se complica cuando los buceadores se encuentran con un feroz tiburón toro... pero los peligros en las profundidades del agua son sólo una fracción de los que les esperan arriba.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tierras Perdidas -->
 <li>
   <a href="../Peliculas/pelicula923.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
