Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Terror en el rio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La calle del terror: La reina del baile -->
+<li>
+  <a href="../Peliculas/pelicula925.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kYeTcmPmuMvBgmwOdOtR5fUwRuH.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La calle del terror: La reina del baile 2025</span>
+    <span class="hidden">¿Quién será la reina del baile de graduación de 1988 en Shadyside? Para la impopular Lori es una competencia a muerte, incluso antes de que empiecen a asesinar a las candidatas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Terror en el rio -->
 <li>
   <a href="../Peliculas/pelicula924.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
