Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La calle del terror: La reina del baile -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Encerrado -->
+<li>
+  <a href="../Peliculas/pelicula926.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wlo2rGpjjHh3X8XImBdeUayKJ6g.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Encerrado 2025</span>
+    <span class="hidden">Un ladrón irrumpe en un todoterreno de lujo y se da cuenta de que ha tropezado con una trampa compleja y mortal tendida por una misteriosa figura.</span>
+  </a>
+</li>
+<!--FIN--><!-- La calle del terror: La reina del baile -->
 <li>
   <a href="../Peliculas/pelicula925.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
