Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La partida de go -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Solo los valientes -->
+<li>
+  <a href="../Peliculas/pelicula928.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pzMqa8qzcHg1qC1mAGttbwtiFui.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Solo los valientes 2017</span>
+    <span class="hidden">Drama inspirado en la lucha del heroico cuerpo de bomberos Granite Mountain Hotshots contra un terrible incendio sucedido en Prescott, Arizona, en junio de 2013</span>
+  </a>
+</li>
+<!--FIN--><!-- La partida de go -->
 <li>
   <a href="../Peliculas/pelicula927.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
