Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Solo los valientes -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Winnie Pooh: Nuevas aventuras con Rito -->
+<li>
+  <a href="../Peliculas/pelicula929.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qTCvI3AXpritP3fCHo7TcJkIbzM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Winnie Pooh: Nuevas aventuras con Rito 2004</span>
+    <span class="hidden">Cuento está protagonizado por Winnie the Pooh y su pequeño amiguito, Roo. Cada año Rabbit trae un huevo de Pascua. Pero este año no ha sido así. Si no hay huevo de Pascua significa que no hay ningún dulce para Pooh, nada de caza para Tigger, ninguna cesta para el cochinillo, ningunas orejas mullidas de conejo para Eeyore y nada de diversión para Roo. Rabbit espera que todos entren en acción: ¡que frieguen, quiten el polvo, y barran! Pero el amor y la sabiduría de Roo demuestran a Rabbit que los días especiales deben ser compartidos de una manera especial.</span>
+  </a>
+</li>
+<!--FIN--><!-- Solo los valientes -->
 <li>
   <a href="../Peliculas/pelicula928.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
