Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Winnie Pooh: Nuevas aventuras con Rito -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Sindicato -->
+<li>
+  <a href="../Peliculas/pelicula930.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1UHp2QEBPnTrcx0i6aYw6jWtDbI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Sindicato 2024</span>
+    <span class="hidden">Un trabajador de la construcción pasa de ser un tipo común y corriente a ser un espía en ciernes cuando su amor de la escuela lo recluta para una misión de espionaje.</span>
+  </a>
+</li>
+<!--FIN--><!-- Winnie Pooh: Nuevas aventuras con Rito -->
 <li>
   <a href="../Peliculas/pelicula929.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
