Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Sindicato -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Heroe Por Encargo -->
+<li>
+  <a href="../Peliculas/pelicula931.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/AbOgZFAKSrYfnfMHd4vUq61J0LV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Héroe Por Encargo 2023</span>
+    <span class="hidden">Un ex agente de las fuerzas especiales acepta un trabajo para brindar seguridad a una periodista mientras entrevista a un dictador, pero cuando estalla un golpe militar en medio de la entrevista, se ven obligados a escapar a la jungla.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Sindicato -->
 <li>
   <a href="../Peliculas/pelicula930.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
