Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un Angel en Nuestras Vidas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Monstruo: La historia de Ed Gein -->
+<li>
+  <a href="../Series/serie103.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/2RVFksm4DF17XZSXMVbNh1qDSOr.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Monstruo: La historia de Ed Gein 2025</span>
+    <span class="hidden">La impactante historia real de Ed Gein, el infame asesino y profanador de tumbas que sirvió como inspiración para muchos de los villanos más macabros y emblemáticos de Hollywood.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un Angel en Nuestras Vidas -->
 <li>
   <a href="../Peliculas/pelicula932.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
