Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Monstruo: La historia de Ed Gein -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Task -->
+<li>
+  <a href="../Series/serie104.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3ZSskZW7Ls5FARdhrLKGcF9lWjE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Task 2025</span>
+    <span class="hidden">Tiene lugar en los suburbios obreros de Filadelfia y sigue a un agente del FBI al mando de un grupo especial. Su objetivo es poner fin a una cadena de robos en casas de drogas protagonizados por un incauto cabeza de familia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Monstruo: La historia de Ed Gein -->
 <li>
   <a href="../Series/serie103.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
