--- a/Series/serie105.html
+++ b/Series/serie105.html
@@ -89,7 +89,10 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/ftkwk1iDB0deK0bKwitRLWaKouE.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/70gyes5zrobf","2":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/yrnl8xir7m5e","3":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/kb1z111ts52p","4":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/roct49uhl6rg","5":"","6":"","7":"","8":""}};
+var videosPorCapitulo = {"1":{"1":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/70gyes5zrobf","2":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/yrnl8xir7m5e","3":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/kb1z111ts52p","4":"https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/roct49uhl6rg",
+                              
+                             }
+                        };
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
