Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mar afuera -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Invasion -->
+<li>
+  <a href="../Series/serie106.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/we6trvt9PfESlC4Td3SWQvmrmb3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Invasión 2021</span>
+    <span class="hidden">La llegada a la Tierra de una especie alienígena pone en peligro a toda la humanidad. Sumérgete en esta historia a través de los ojos de cinco personas de diferentes partes del mundo que intentan comprender el caos que las envuelve.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mar afuera -->
 <li>
   <a href="../Series/serie105.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
