--- a/Series/serie85.html
+++ b/Series/serie85.html
@@ -159,7 +159,15 @@ var videosPorCapitulo = {
     "7": {
       "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/gw0dzy6ih85u",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/bng063sd8j3x"
-    }
+    },
+ "8": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/4n6hkhbwwso1",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/zu1srdu4u3p6"
+    },
+    "9": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/hvtu0iiy6cjw",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/joarybxp4eh6"
+    },
   }
 };
 var serieId = "223326";
