--- a/Series/serie68.html
+++ b/Series/serie68.html
@@ -150,6 +150,18 @@ var videosPorCapitulo = {
       "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/vuekb04v2t20",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/30r4igajthlc",
       "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/my3n0tzt4072"
+    },
+    "5": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/o3jy95w9k7ys",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/n8cpmzc98erb"
+    },
+    "6": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/qjfcj3i87da6",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/pk514njzi95s"
+    },
+    "7": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/4xwn9km969h3",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/dg5qp4zt8mqk"
     }
   }
 };
